# qwen-asr-docker

./: .dockerignore  .env.example  .gitignore  Dockerfile  PLAN.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: publish-image.yml
asr_service/: app.py  catalog.py  config.py  downloader.py  formatters.py  language.py  model_manager.py  preflight.py
scripts/: start.sh
tests/: test_app.py  test_config.py  test_formatters.py
