[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qwen3-asr-openai-server"
version = "0.1.0"
description = "OpenAI-compatible Docker ASR service for Qwen3-ASR"
readme = "PLAN.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "pydantic>=2.8,<3.0",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.34,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.0,<9.0",
]

[tool.setuptools.packages.find]
include = ["asr_service*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
